### Fix colorbar association with specific axes (HEAD -> refactoring)
>Thu, 22 May 2025 05:52:25 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

- Update fig.colorbar to associate with the correct axes (ax)



### Enhance ChainConsumer usage and plotting configuration
>Thu, 22 May 2025 05:49:43 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

- Import additional ChainConsumer components (Chain, PlotConfig)
- Add labels mapping for parameters to improve plot readability
- Modify data handling to use Chain objects directly
- Update plotting configuration with PlotConfig for better customization



### Use .iloc for positional indexing in describe() method
>Thu, 22 May 2025 05:44:10 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

- Replace direct indexing with .iloc for more reliable positional indexing
- Ensure consistent and explicit access to DataFrame columns



### Update license header and logging library
>Thu, 22 May 2025 05:40:27 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

- Change license header to use SPDX identifier for Apache 2.0 compatibility
- Replace logging library with loguru for enhanced logging capabilities



### Refactor project configuration and dependencies
>Thu, 22 May 2025 05:37:33 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

- Update Makefile and pyproject.toml to centralize configuration
- Remove requirements files
- Delete setup.py in favor of pyproject.toml for build configuration