@@ -7,7 +7,7 @@ Plot joint posterior of all catalog sources in galactic coordinates.
 """
 #%%
 # Load catalogs and combine chain samples
-import logging
+from loguru import logger
 
 import ligo.skymap.plot
 import matplotlib.pyplot as plt
@@ -16,14 +16,11 @@ import pandas as pd
 
 from lisacattools import convert_ecliptic_to_galactic
 from lisacattools import HPhist
-from lisacattools import OFF
 from lisacattools.catalog import GWCatalogs
 from lisacattools.catalog import GWCatalogType
 
-logger = logging.getLogger("lisacattools")
-logger.setLevel(
-    OFF
-)  # Set the logger to OFF. By default, the logger is set to INFO
+# Make disable the logs
+logger.remove()
 
 # Start by loading the main catalog file processed from GBMCMC outputs
 catPath = "../../tutorial/data/ucb"
