@@ -1,4 +1,14 @@
-### Fix colorbar association with specific axes (HEAD -> refactoring)
+### Disable the logger (HEAD -> refactoring)
+>Thu, 22 May 2025 05:53:08 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix colorbar association with specific axes
 >Thu, 22 May 2025 05:52:25 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
